2003-06-20  Dodji Seketeli  <dodji@seketeli.org>

	* src/parser/cr-term.[ch]:
	added the  cr_term_parse_expression_from_buf() function.
	this is new and still needs to be tested.
	
	* src/parser/cr-parser.[hc]:
	made cr_parser_parse_expr() public.
	
	* src/parser/cr-declaration.[ch]:
	changed cr_declaration_parse() into 
	cr_declaration_parse_parse_from_buf().
	
	* src/parser/cr-statement.[ch]:
	fixed some typos.
	added the function cr_statement_does_buf_parses_against_core() and
	cr_statement_ruleset_get_declarations().
	
	* src/parser/cr-parser.[ch]:
	made cr_parser_parse_statement_core() public.
	
	* src/parser/cr-om-parser.c:
	fixed a small typo.
	
	* src/parser/cr-declaration.[ch]
	added a new cr_declaration_unlink() function.

2003-06-19  Dodji Seketeli  <dodji@seketeli.org>

	* tests/test4-main.[ch]: updated this to test
	cr_statement_parse_from_buf(). It seems to work now.
	Still some memleaks to fix.

	* src/parser/cr-statement.[ch]:
	some bug fixes in cr_statement_parse_from_buf() + 
	added a new cr_statement_at_import_rule_parse_from_buf() method.

2003-06-18  Dodji Seketeli  <dodji@seketeli.org>

	* src/parser/cr-statement.[ch]:
	added cr_statement_font_face_rule_parse_from_buf () .
	and a generic cr_statement_parse_from_buf () that knows
	how to a parse virtually any css2 statement. This needs debugging
	though.

	* src/parser/cr-parser.c: fixed some possible sigsev
	that could occur when trying to access a null sac handler.

	* tests/test4-main.c: updated the test routine to test
	cr_statement_at_charset_rule_parse_from_buf().
	
	* src/parser/cr-statement.[ch]: added a new
	cr_statement_at_charset_rule_parse_from_buf() method to
	to create an "@charset" statement from a buffer text content.

	* src/parser/cr-parser.c:Fixeds a small possibility of memleak
	in cr_parser_parse_charse()	
	
	* tests/test4-main.c: fixed a small typo in the "@page" rule
	embedded in gv_at_page_buf.
	
	* src/parser/cr-parser.c: fixed a small bug in the